Styling and a beautiful start button.

--- a/app/views/Application/index.html
+++ b/app/views/Application/index.html
@@ -1,4 +1,10 @@
 #{extends 'main.html' /}
 #{set title:'Home' /}
 
-#{welcome /}
+<div class="main-content start">
+
+    <div class="new-game">
+        <a class="button gray new" href="@{Application.start}">Spela!</a>
+    </div>
+
+</div>
