--- a/app/views/main.html
+++ b/app/views/main.html
@@ -1,16 +1,29 @@
 <!DOCTYPE html>
-
 <html>
-    <head>
-        <title>#{get 'title' /}</title>
-        <meta charset="${_response_encoding}">
-        <link rel="stylesheet" media="screen" href="@{'/public/stylesheets/main.css'}">
-        #{get 'moreStyles' /}
-        <link rel="shortcut icon" type="image/png" href="@{'/public/images/favicon.png'}">
-        <script src="@{'/public/javascripts/jquery-1.5.2.min.js'}" type="text/javascript" charset="${_response_encoding}"></script>
-        #{get 'moreScripts' /}
-    </head>
-    <body>
-        #{doLayout /}
-    </body>
+<head>
+    <title>#{get 'title' /}</title>
+    <meta charset="${_response_encoding}">
+    <link rel="stylesheet" href="@{'public/fonts/fonts.css'}" type="text/css">
+    <link rel="stylesheet" media="screen" href="@{'/public/stylesheets/main.css'}">
+    <link rel="shortcut icon" type="image/png" href="@{'/public/images/favicon.png'}">
+    #{script 'jquery-1.7.min.js'/}
+</head>
+<body>
+<div class="wrapper">
+    <header>
+        <div class="logo">
+            <h1>Play the Monty Hall Game!</h1>
+        </div>
+    </header>
+
+    #{doLayout /}
+
+    <footer>
+        <ul>
+            <li>© Play! Games 2011</li>
+            <li><a href="#">Legal Bullshit</a></li>
+        </ul>
+    </footer>
+</div>
+</body>
 </html>
