Enter a name and show the doors.

--- a/app/views/Application/index.html
+++ b/app/views/Application/index.html
@@ -4,7 +4,7 @@
 <div class="main-content start">
 
     <div class="new-game">
-        <a class="button gray new" href="@{Application.start}">Spela!</a>
+        <a class="button gray new" href="@{Application.start}">Start!</a>
     </div>
 
 </div>
