Persisting Game. Validating playerName.

--- a/app/views/Application/game.html
+++ b/app/views/Application/game.html
@@ -4,7 +4,7 @@
 <div class="main-content start">
 
     <div class="doors">
-        <h3>Hello <strong>${session.name}</strong>, please choose a door.</h3>
+        <h3>Hello <strong>${game.playerName}</strong>, please choose a door.</h3>
 
     <ul class="door-list">
         #{list items:1..3, as:'i'}
