--- a/app/views/Application/start.html
+++ b/app/views/Application/start.html
@@ -9,7 +9,7 @@
 
     <ul class="form">
         <li>
-          <input type="text" name="name" placeholder="Player name" value="${flash.name}">
+          <input type="text" name="playerName" placeholder="Player name" value="${flash.playerName}">
         </li>
         <li>
             <input class="button gray" type="submit" value="Play!">
