--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -61,78 +61,18 @@ article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, 
   *zoom: 1;
 }
 
-header, .main-content, section, footer, .col-12 {
+header, .main-content, section, footer {
   display: inline;
   float: left;
   margin-right: 0;
   width: 792px;
 }
-* html header, * html .main-content, * html section, * html footer, * html .col-12 {
-  overflow-x: hidden;
-}
-
-.col-2 {
-  display: inline;
-  float: left;
-  margin-right: 12px;
-  width: 122px;
-}
-* html .col-2 {
-  overflow-x: hidden;
-}
-
-.col-10 {
-  display: inline;
-  float: left;
-  margin-right: 12px;
-  width: 658px;
-}
-* html .col-10 {
-  overflow-x: hidden;
-}
-
-.col-2 + .col-10 {
-  display: inline;
-  float: left;
-  margin-right: 0;
-  width: 658px;
-}
-* html .col-2 + .col-10 {
-  overflow-x: hidden;
-}
-
-.col-3 {
-  display: inline;
-  float: left;
-  margin-right: 12px;
-  width: 189px;
-}
-* html .col-3 {
-  overflow-x: hidden;
-}
-
-.col-9 {
-  display: inline;
-  float: left;
-  margin-right: 12px;
-  width: 591px;
-}
-* html .col-9 {
-  overflow-x: hidden;
-}
-
-.col-3 + .col-9 {
-  display: inline;
-  float: left;
-  margin-right: 0;
-  width: 591px;
-}
-* html .col-3 + .col-9 {
+* html header, * html .main-content, * html section, * html footer {
   overflow-x: hidden;
 }
 
 .wrapper {
-  width: 940px;
+  width: 792px;
   padding: 5px 10px 0;
   overflow: visible;
 }
@@ -215,40 +155,6 @@ header .logo a {
   text-decoration: none;
 }
 header .logo a:hover {
-  color: #1d7bbe;
-}
-header .first-menu {
-  display: inline;
-  float: left;
-  margin-right: 0;
-  width: 256px;
-  padding-top: 6px;
-  float: right;
-}
-* html header .first-menu {
-  overflow-x: hidden;
-}
-header .first-menu li {
-  margin-top: 50px;
-  margin-right: 20px;
-  float: right;
-}
-header .first-menu li:first-child {
-  margin-right: 0;
-}
-header .first-menu li p {
-  font-size: 13px;
-}
-header .first-menu li .login-logout {
-  position: relative;
-  color: black;
-  text-decoration: none;
-  font-size: 15px;
-  line-height: 24px;
-  display: block;
-  float: left;
-}
-header .first-menu li .login-logout:hover, header .first-menu li .login-logout.active {
   color: #1d7bbe;
 }
 
@@ -335,204 +241,6 @@ header .first-menu li .login-logout:hover, header .first-menu li .login-logout.a
   width: 260px;
 }
 
-.wizard {
-  display: inline;
-  float: left;
-  margin-right: 0;
-  width: 524px;
-  padding-left: 160px;
-}
-* html .wizard {
-  overflow-x: hidden;
-}
-.wizard .form li {
-  background: none;
-  padding: 0;
-  margin-bottom: 6px;
-  border-bottom: none;
-  font-size: 14px;
-  table-table-layout: fixed;
-  table-width: 100%;
-}
-.wizard .form li.buttons {
-  margin-top: 48px;
-}
-.wizard .form li input {
-  padding: 6px 6px;
-  width: 120px;
-  margin-right: 6px;
-}
-.wizard .form li input[type="radio"] {
-  margin-top: 4px;
-  width: 20px;
-}
-.wizard .form li select {
-  width: 90px;
-  font-size: 16px;
-}
-.wizard .form li label {
-  line-height: 22px;
-  width: 40%;
-}
-.wizard .form li label.site-label {
-  line-height: 34px;
-  margin-left: 14px;
-}
-.wizard .form li label.error-input-label {
-  line-height: 34px;
-  margin-right: 14px;
-  width: 23%;
-}
-.wizard .form li img {
-  margin-left: 20px;
-}
-.wizard .form li p {
-  margin-top: 13px;
-  color: #868686;
-  font-style: italic;
-  line-height: 18px;
-}
-.wizard .form li h3 {
-  font-size: 20px;
-  margin: 36px 0 6px 0;
-  border-bottom: 1px solid #ebebeb;
-  width: 40%;
-}
-.wizard .form li h3.first {
-  margin-top: 0;
-}
-.wizard .form li span {
-  -moz-border-radius: 4px;
-  -webkit-border-radius: 4px;
-  -o-border-radius: 4px;
-  -ms-border-radius: 4px;
-  -khtml-border-radius: 4px;
-  border-radius: 4px;
-  padding: 4px 4px;
-  font-weight: bold;
-  line-height: 14px;
-  color: #f5f5f5;
-  background: #868686;
-  display: inline-block;
-}
-.wizard .form li th {
-  padding-right: 10px;
-}
-.wizard .form li th:last-child {
-  padding: 0;
-}
-.wizard .form li th .label-label {
-  width: 300px;
-  text-align: left;
-}
-.wizard .form li th .label-type {
-  width: auto;
-  text-align: left;
-}
-.wizard .form li th .label-icon {
-  width: 30px;
-  text-align: center;
-}
-.wizard .form li td {
-  padding-right: 10px;
-}
-.wizard .form li td:last-child {
-  padding: 0;
-  text-align: center;
-}
-.wizard .form li td input {
-  width: 100%;
-}
-.wizard .form li td input[type=checkbox] {
-  width: auto;
-  text-align: center;
-}
-.wizard .form li td select {
-  width: 100%;
-}
-.wizard .form li td img {
-  margin: 8px 0 0 0;
-}
-.wizard .form li .button {
-  font-size: 14px;
-  width: auto;
-  padding: 8px 10px;
-}
-.wizard .form li .error {
-  color: red;
-  font-size: 13px;
-}
-.wizard .form li .center {
-  padding-left: 28px;
-  text-align: center;
-  vertical-align: middle;
-}
-.wizard .form li .center:last-child {
-  padding-left: 28px;
-}
-.wizard .form li .center1 {
-  padding-left: 0;
-  text-align: center;
-}
-.wizard .form li .site {
-  width: 200px;
-}
-.wizard .form li .error-input {
-  width: 74%;
-  margin-right: 0;
-  float: right;
-}
-
-.service-help {
-  display: none;
-}
-
-.tooltip {
-  display: none;
-  height: 200px;
-  padding: 10px;
-  width: 300px;
-  font-size: 14px;
-  color: #545454;
-  background-image: -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #f6f6f6), color-stop(100%, #dbdbdb));
-  background-image: -webkit-linear-gradient(#f6f6f6, #dbdbdb);
-  background-image: -moz-linear-gradient(#f6f6f6, #dbdbdb);
-  background-image: -o-linear-gradient(#f6f6f6, #dbdbdb);
-  background-image: -ms-linear-gradient(#f6f6f6, #dbdbdb);
-  background-image: linear-gradient(#f6f6f6, #dbdbdb);
-}
-
-.block-header {
-  -moz-border-radius: 2px;
-  -webkit-border-radius: 2px;
-  -o-border-radius: 2px;
-  -ms-border-radius: 2px;
-  -khtml-border-radius: 2px;
-  border-radius: 2px;
-  background: #ebebeb;
-  padding: 6px 12px;
-  margin-bottom: 24px;
-}
-.block-header .toggle {
-  float: right;
-  color: #545454;
-  padding-right: 16px;
-  position: relative;
-}
-.block-header .toggle:after {
-  content: "";
-  width: 0;
-  height: 0;
-  border-left: 4px solid transparent;
-  border-right: 4px solid transparent;
-  border-top: 5px solid #868686;
-  position: absolute;
-  top: 10px;
-  right: 0px;
-  top: 10px;
-  right: 0px;
-}
-
 .form {
   -moz-box-sizing: border-box;
   -webkit-box-sizing: border-box;
@@ -596,195 +304,6 @@ header .first-menu li .login-logout:hover, header .first-menu li .login-logout.a
 .form li strong {
   color: black;
 }
-.form li.search input {
-  background: url("../images/icon-search.png") no-repeat scroll center right;
-  height: 32px;
-  font-size: 12px;
-}
-.form li .holder {
-  margin: -2px 12px 0 0;
-  float: left;
-}
-.form li.payment input {
-  font-family: "AllerBold";
-  width: 50px;
-  margin-right: 12px;
-  text-align: center;
-}
-.form li.date input {
-  font-family: "AllerBold";
-  width: 100px;
-}
-.form li.date span {
-  margin: 0 4px 0 18px;
-}
-.form h4 {
-  font-family: "AllerBold";
-  margin-bottom: 6px;
-}
-.form .graph {
-  background: #ebebeb;
-  -moz-border-radius: 4px;
-  -webkit-border-radius: 4px;
-  -o-border-radius: 4px;
-  -ms-border-radius: 4px;
-  -khtml-border-radius: 4px;
-  border-radius: 4px;
-  padding: 50px 10px 5px;
-  -moz-box-sizing: border-box;
-  -webkit-box-sizing: border-box;
-  -ms-box-sizing: border-box;
-  box-sizing: border-box;
-}
-.form .form {
-  padding-top: 12px;
-  padding-bottom: 6px;
-  margin: 12px 0;
-}
-.form .wrapped {
-  -moz-border-radius: 8px;
-  -webkit-border-radius: 8px;
-  -o-border-radius: 8px;
-  -ms-border-radius: 8px;
-  -khtml-border-radius: 8px;
-  border-radius: 8px;
-  border: 2px solid #cfcfcf;
-  padding: 12px;
-  display: block;
-  float: left;
-  position: relative;
-  margin-top: 18px;
-  margin-bottom: 0px;
-}
-.form .wrapped:after {
-  content: "";
-  background: url("../images/icon-arrow-edit-second-level.png") no-repeat scroll top right;
-  width: 22px;
-  height: 10px;
-  display: block;
-  position: absolute;
-  top: -10px;
-  left: 50%;
-  margin-left: -11px;
-}
-.form .extra-bg {
-  -moz-box-sizing: border-box;
-  -webkit-box-sizing: border-box;
-  -ms-box-sizing: border-box;
-  box-sizing: border-box;
-  -moz-border-radius: 2px;
-  -webkit-border-radius: 2px;
-  -o-border-radius: 2px;
-  -ms-border-radius: 2px;
-  -khtml-border-radius: 2px;
-  border-radius: 2px;
-  background: #ebebeb;
-  padding: 12px;
-}
-.form .sort {
-  -moz-box-sizing: border-box;
-  -webkit-box-sizing: border-box;
-  -ms-box-sizing: border-box;
-  box-sizing: border-box;
-  margin: 12px 0 12px;
-  display: block;
-  float: left;
-  width: 100%;
-}
-.form .sort li {
-  -moz-box-sizing: border-box;
-  -webkit-box-sizing: border-box;
-  -ms-box-sizing: border-box;
-  box-sizing: border-box;
-  -moz-border-radius: 2px;
-  -webkit-border-radius: 2px;
-  -o-border-radius: 2px;
-  -ms-border-radius: 2px;
-  -khtml-border-radius: 2px;
-  border-radius: 2px;
-  background: #ebebeb url("../images/icon-drag-bars.png") no-repeat scroll center right;
-  padding: 4px 12px;
-  margin-bottom: 6px;
-  cursor: move;
-}
-.form .tip {
-  font-style: italic;
-  color: #868686;
-}
-.form.filter {
-  margin-bottom: 12px;
-}
-
-.button-small {
-  float: left;
-  display: inline-block;
-  -moz-border-radius: 2px;
-  -webkit-border-radius: 2px;
-  -o-border-radius: 2px;
-  -ms-border-radius: 2px;
-  -khtml-border-radius: 2px;
-  border-radius: 2px;
-  text-decoration: none;
-  -moz-box-shadow: inset rgba(255, 255, 255, 0.4) 0px 1px 1px 0px;
-  -webkit-box-shadow: inset rgba(255, 255, 255, 0.4) 0px 1px 1px 0px;
-  -o-box-shadow: inset rgba(255, 255, 255, 0.4) 0px 1px 1px 0px;
-  box-shadow: inset rgba(255, 255, 255, 0.4) 0px 1px 1px 0px;
-}
-.button-small img {
-  display: none;
-}
-.button-small:hover {
-  -moz-box-shadow: rgba(0, 0, 0, 0) 0px 1px 5px 0px, inset rgba(255, 255, 255, 0.6) 0px 1px 1px 0px, inset rgba(255, 255, 255, 0.2) 0px 0px 12px 2px;
-  -webkit-box-shadow: rgba(0, 0, 0, 0) 0px 1px 5px 0px, inset rgba(255, 255, 255, 0.6) 0px 1px 1px 0px, inset rgba(255, 255, 255, 0.2) 0px 0px 12px 2px;
-  -o-box-shadow: rgba(0, 0, 0, 0) 0px 1px 5px 0px, inset rgba(255, 255, 255, 0.6) 0px 1px 1px 0px, inset rgba(255, 255, 255, 0.2) 0px 0px 12px 2px;
-  box-shadow: rgba(0, 0, 0, 0) 0px 1px 5px 0px, inset rgba(255, 255, 255, 0.6) 0px 1px 1px 0px, inset rgba(255, 255, 255, 0.2) 0px 0px 12px 2px;
-}
-.button-small.edit, .button-small.add, .button-small.delete {
-  border: 1px solid #aeaeae;
-  width: 21px;
-  height: 21px;
-  margin-left: 6px;
-  text-align: center;
-}
-.button-small.edit, .button-small.delete {
-  background-image: url("../images/icon-edit-16.png"), -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #bebebe), color-stop(100%, #aaaaaa));
-  background-image: url("../images/icon-edit-16.png"), -webkit-linear-gradient(#bebebe, #aaaaaa);
-  background-image: url("../images/icon-edit-16.png"), -moz-linear-gradient(#bebebe, #aaaaaa);
-  background-image: url("../images/icon-edit-16.png"), -o-linear-gradient(#bebebe, #aaaaaa);
-  background-image: url("../images/icon-edit-16.png"), -ms-linear-gradient(#bebebe, #aaaaaa);
-  background-image: url("../images/icon-edit-16.png"), linear-gradient(#bebebe, #aaaaaa);
-  background-repeat: no-repeat, repeat;
-  background-position: center center, center center;
-  text-indent: -999999px;
-}
-.button-small.add {
-  border: 1px solid #6ebe55;
-  background-image: url("../images/icon-add-24.png"), -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #73c659), color-stop(100%, #67b250));
-  background-image: url("../images/icon-add-24.png"), -webkit-linear-gradient(#73c659, #67b250);
-  background-image: url("../images/icon-add-24.png"), -moz-linear-gradient(#73c659, #67b250);
-  background-image: url("../images/icon-add-24.png"), -o-linear-gradient(#73c659, #67b250);
-  background-image: url("../images/icon-add-24.png"), -ms-linear-gradient(#73c659, #67b250);
-  background-image: url("../images/icon-add-24.png"), linear-gradient(#73c659, #67b250);
-  background-repeat: no-repeat, repeat;
-  background-position: center center, center center;
-  -moz-background-size: 16px 16px, auto auto;
-  -webkit-background-size: 16px 16px, auto auto;
-  -o-background-size: 16px 16px, auto auto;
-  background-size: 16px 16px, auto auto;
-  text-indent: -999999px;
-}
-.button-small.delete {
-  background-image: url("../images/icon-trash-24.png"), -webkit-gradient(linear, 50% 0%, 50% 100%, color-stop(0%, #bebebe), color-stop(100%, #aaaaaa));
-  background-image: url("../images/icon-trash-24.png"), -webkit-linear-gradient(#bebebe, #aaaaaa);
-  background-image: url("../images/icon-trash-24.png"), -moz-linear-gradient(#bebebe, #aaaaaa);
-  background-image: url("../images/icon-trash-24.png"), -o-linear-gradient(#bebebe, #aaaaaa);
-  background-image: url("../images/icon-trash-24.png"), -ms-linear-gradient(#bebebe, #aaaaaa);
-  background-image: url("../images/icon-trash-24.png"), linear-gradient(#bebebe, #aaaaaa);
-  -moz-background-size: 16px 16px, auto auto;
-  -webkit-background-size: 16px 16px, auto auto;
-  -o-background-size: 16px 16px, auto auto;
-  background-size: 16px 16px, auto auto;
-}
 
 .button {
   -moz-border-radius: 4px;
@@ -825,7 +344,7 @@ header .first-menu li .login-logout:hover, header .first-menu li .login-logout.a
 }
 .button.gray.new {
   font-family: "SnigletRegular";
-  font-size: 60px;
+  font-size: 50px;
   padding: 37px 37px;
   margin-top: 60px;
 }
